[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langgraph>=1.0.10",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pg8000>=1.31.5",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
]
